fixed some image sizing on mobile version as well as header sizes

--- a/src/components/about/_about.scss
+++ b/src/components/about/_about.scss
@@ -4,7 +4,7 @@
 .about-body{
   height: 100%;
   .about-body-div{
-    height: 25em;
+    height: 20em;
     width: 100%;
     background: $color-accent;
     position: relative;
@@ -22,7 +22,7 @@
   height: 100%;
   .about-header{
     width: 100%;
-    height: 100em;
+    height: 125em;
     position: relative;
     .about-header-div{
       width: 100%;
