--- a/src/components/education/_education.scss
+++ b/src/components/education/_education.scss
@@ -4,7 +4,7 @@
 .education-body{
   width: 100%;
   .education-header{
-    height: 15em;
+    height: 20em;
     div{
       position: relative;
       height: 100%;
