--- a/src/components/projects/_projects.scss
+++ b/src/components/projects/_projects.scss
@@ -6,7 +6,7 @@
   .projects-header{
     position: relative;
     width: 100%;
-    height: 15em;
+    height: 20em;
     background: $color-accent2;
     h2{
       font-size: 8em;
